colors and banner

--- a/humanoids2018/index.html
+++ b/humanoids2018/index.html
@@ -8,6 +8,30 @@
 <html>
 	<head>
 
+
+		<link rel="apple-touch-icon-precomposed" sizes="57x57" href="images/favicons/apple-touch-icon-57x57.png" />
+		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/favicons/apple-touch-icon-114x114.png" />
+		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/favicons/apple-touch-icon-72x72.png" />
+		<link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/favicons/apple-touch-icon-144x144.png" />
+		<link rel="apple-touch-icon-precomposed" sizes="60x60" href="images/favicons/apple-touch-icon-60x60.png" />
+		<link rel="apple-touch-icon-precomposed" sizes="120x120" href="images/favicons/apple-touch-icon-120x120.png" />
+		<link rel="apple-touch-icon-precomposed" sizes="76x76" href="images/favicons/apple-touch-icon-76x76.png" />
+		<link rel="apple-touch-icon-precomposed" sizes="152x152" href="images/favicons/apple-touch-icon-152x152.png" />
+		<link rel="icon" type="image/png" href="images/favicons/favicon-196x196.png" sizes="196x196" />
+		<link rel="icon" type="image/png" href="images/favicons/favicon-96x96.png" sizes="96x96" />
+		<link rel="icon" type="image/png" href="images/favicons/favicon-32x32.png" sizes="32x32" />
+		<link rel="icon" type="image/png" href="images/favicons/favicon-16x16.png" sizes="16x16" />
+		<link rel="icon" type="image/png" href="images/favicons/favicon-128.png" sizes="128x128" />
+		<meta name="application-name" content="&nbsp;"/>
+		<meta name="msapplication-TileColor" content="#FFFFFF" />
+		<meta name="msapplication-TileImage" content="images/favicons/mstile-144x144.png" />
+		<meta name="msapplication-square70x70logo" content="images/favicons/mstile-70x70.png" />
+		<meta name="msapplication-square150x150logo" content="images/favicons/mstile-150x150.png" />
+		<meta name="msapplication-wide310x150logo" content="images/favicons/mstile-310x150.png" />
+		<meta name="msapplication-square310x310logo" content="images/favicons/mstile-310x310.png" />
+
+
+		<!--
 		<link rel="apple-touch-icon" sizes="57x57" href="images/favicons/apple-touch-icon-57x57.png">
 		<link rel="apple-touch-icon" sizes="60x60" href="images/favicons/apple-touch-icon-60x60.png">
 		<link rel="apple-touch-icon" sizes="72x72" href="images/favicons/apple-touch-icon-72x72.png">
@@ -30,6 +54,7 @@
 		<meta name="msapplication-TileImage" content="images/favicons/mstile-144x144.png">
 		<meta name="msapplication-config" content="img/favicons/browserconfig.xml">
 		<meta name="theme-color" content="#ffffff">
+		-->
 
 
 
@@ -69,7 +94,7 @@
 			<nav id="nav">
 				<ul class="links">
 					<li><a href="#top">Top</a></li>
-					<li><a href="#call">Call for Contribution</a></li>
+					<li><a href="#call">Call for Contributions</a></li>
 					<!-- <li><a href="#objectives">Objectives</a></li> -->
 					<li><a href="#schedule">Schedule</a></li>
 					<li><a href="#speakers">Speakers</a></li>
@@ -680,7 +705,7 @@
 					</div>
 				</article>
 
-
+				<!--
 				<span class="anchor2" id="org_kaminaga"></span>
 				<article class="feature left">
 					<span class="image object-fit_contain"><img src="images/speakers/web/Kaminaga_Hiroshi.jpg" alt="" /></span>
@@ -692,6 +717,7 @@
 
 					</div>
 				</article>	
+				-->
 
 
 				<span class="anchor2" id="org_kim"></span>
@@ -745,7 +771,7 @@
 				<!-- Logos -->
 				<div class="logo_container2">
 					<center>
-					<img class="org_logos2 object-fit_contain" src="images/logos/web/logos2.png" alt="" />
+					<img class="org_logos2 object-fit_contain" src="images/logos/web/logos3.png" alt="" />
 					</center>
 				</div>
 
@@ -762,6 +788,9 @@
 
 				
 				<ul>
+					
+					<li><a target="_blank" href="http://humanoids2018.csp.escience.cn/">Humanoids 2018</a></li>
+
 					<li><a target="_blank" href="http://humanoids2017.loria.fr/">Humanoids 2017</a></li>
 
 					<li><a target="_blank" href="http://www.cs.cmu.edu/~cga/humanoids16workshop/">Can we Build Baymax? Humanoids 2016</a></li>
