--- a/humanoids2018/index.html
+++ b/humanoids2018/index.html
@@ -23,7 +23,7 @@
 
 
 
-		<title>Can we Build Baymax? Humanoids 2018</title>
+		<title>Can we build Baymax? Humanoids 2018</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -38,7 +38,7 @@
 		<meta property="og:url"                content="http://www.cs.cmu.edu/~cga/humanoids18workshop/" />
 		<meta property="og:type"               content="article" />
 		<meta property="og:title"              content="Can we Build Baymax? Humanoids 2018" />
-		<meta property="og:description"        content="We are excited to announce that the full-day workshop 'Can We Build Baymax? Part 4. Fail-Safe HW & SW and Learning in Humanoid Robots' will be held on November 6, 2018 at IEEE-RAS International Conference on Humanoid Robots (Humanoids 2018) in Beijing, China. We invite you to contribute and to participate in this workshop."/>
+		<meta property="og:description"        content="We are excited to announce that the full-day workshop 'Can we build Baymax? Part 4. Fail-Safe HW & SW and Learning in Humanoid Robots' will be held on November 6, 2018 at IEEE-RAS International Conference on Humanoid Robots (Humanoids 2018) in Beijing, China. We invite you to contribute and to participate in this workshop."/>
 		<meta property="og:image"              content="images/facebook/banner.jpg" />
 
 
