--- a/humanoids2018/index.html
+++ b/humanoids2018/index.html
@@ -23,7 +23,7 @@
 
 
 
-		<title>Can we Build Baymax? Humanoids 2018</title>
+		<title>Can we build Baymax? Humanoids 2018</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -37,7 +37,7 @@
 		<!-- for facebook -->
 		<meta property="og:url"                content="http://www.cs.cmu.edu/~cga/humanoids18workshop/" />
 		<meta property="og:type"               content="article" />
-		<meta property="og:title"              content="Can we Build Baymax? Humanoids 2018" />
+		<meta property="og:title"              content="Can we build Baymax? Humanoids 2018" />
 		<meta property="og:description"        content="We are excited to announce that the full-day workshop 'Can We Build Baymax? Part 4. Fail-Safe HW & SW and Learning in Humanoid Robots' will be held on November 6, 2018 at IEEE-RAS International Conference on Humanoid Robots (Humanoids 2018) in Beijing, China. We invite you to contribute and to participate in this workshop."/>
 		<meta property="og:image"              content="images/facebook/banner.jpg" />
 
@@ -77,7 +77,7 @@
 			<section id="banner">
 				<!--<i class="icon fa-diamond"></i>-->
 				<div id="WSTitle">
-					<div class="bighero-font">Can We Build</div>
+					<div class="bighero-font">Can we build</div>
 					<div class="bighero-font">Baymax?</div>
 				</div>
 				<p><strong>Part 4: Fail-Safe HW & SW<br>and Learning in Humanoid Robots</strong></p>						
@@ -110,7 +110,7 @@
 			<div class="inner">
 				<h2><strong>Objectives</strong></h2>
 				<!--<h2><strong>Call For Contributions</strong></h2>-->
-				<p>We are excited to announce the 4th workshop titled <strong>Can we build Baymax?</strong> will be held on November 6, 2016 at the IEEE-RAS International Conference on Humanoid Robots <a target="_blank" href="http://humanoids2018.csp.escience.cn/">(Humanoids 2018)</a> in Beijing, China. This workshop has taken place every year since the first in 2015. Baymax is a humanoid character in the Disney feature animation Big Hero 6. It is a healthcare robot with an inflatable body, capable of walking, bumping into surrounding objects, learning motions and physically interacting with people. However, in the real world it is not easy to build such a robot. In the previous workshops, we have discussed topics on mechanisms and structure, sensors, protection, control, and fabrication regarding such special soft robots. As a continuation of this discussion, this workshop will bring together researchers focusing on practical technologies to realize fail-safe systems and tackle challenges in learning for humanoid robots like Baymax. </p>
+				<p>We are excited to announce the 4th workshop titled <i>Can we build Baymax?</i> will be held on November 6, 2016 at the IEEE-RAS International Conference on Humanoid Robots <a target="_blank" href="http://humanoids2018.csp.escience.cn/">(Humanoids 2018)</a> in Beijing, China. This workshop has taken place every year since the first in 2015. Baymax is a humanoid character in the Disney feature animation Big Hero 6. It is a healthcare robot with an inflatable body, capable of walking, bumping into surrounding objects, learning motions and physically interacting with people. However, in the real world it is not easy to build such a robot. In the previous workshops, we have discussed topics on mechanisms and structure, sensors, protection, control, and fabrication regarding such special soft robots. As a continuation of this discussion, this workshop will bring together researchers focusing on practical technologies to realize fail-safe systems and tackle challenges in learning for humanoid robots like Baymax. </p>
 
 
 				<p>We invite you to contribute and to participate in this workshop.</p>
@@ -786,11 +786,11 @@ Over the past ten years Gordon Cheng has been the co-inventor of approximately 2
 					
 					<li><a target="_blank" href="http://humanoids2018.csp.escience.cn/">Humanoids 2018</a></li>
 
-					<li><a target="_blank" href="http://www.cs.cmu.edu/~cga/humanoids17workshop/">Can we Build Baymax? Humanoids 2017</a></li>
+					<li><a target="_blank" href="http://www.cs.cmu.edu/~cga/humanoids17workshop/">Can we build Baymax? Humanoids 2017</a></li>
 
-					<li><a target="_blank" href="http://www.cs.cmu.edu/~cga/humanoids16workshop/">Can we Build Baymax? Humanoids 2016</a></li>
+					<li><a target="_blank" href="http://www.cs.cmu.edu/~cga/humanoids16workshop/">Can we build Baymax? Humanoids 2016</a></li>
 
-					<li><a target="_blank" href="http://www.cs.cmu.edu/~cga/humanoids15workshop/">Can we Build Baymax? Humanoids 2015</a></li>
+					<li><a target="_blank" href="http://www.cs.cmu.edu/~cga/humanoids15workshop/">Can we build Baymax? Humanoids 2015</a></li>
 
 					<li><a target="_blank" href="http://www.build-baymax.org">Build-Baymax.org</a></li>
 				</ul>
