Typo NAIST corrected as AIST

--- a/humanoids2018/index.html
+++ b/humanoids2018/index.html
@@ -135,7 +135,7 @@
 				<ul>
 					<li>Gordon Cheng (Technical University of Munich, Germany)</li> 
 					<li>Yohei Kakiuchi (University of Tokyo, Japan)</li>
-					<li>Hiroshi Kaminaga (NAIST, Japan)</li>
+					<li>Hiroshi Kaminaga (AIST, Japan)</li>
 					<li>Abderrahmane Kheddar, (CNRS-AIST, France)</li>
 					<!--<li>Joohyung Kim (Disney Research Los Angeles, USA)</li> -->
 					<li>Jinoh Lee (Italian Institute of Technology, Italy)</li>
@@ -147,7 +147,7 @@
 				<strong>Tentative Speakers:</strong>
 				<ul>
 					<li>Alex Alspach (Toyota Research Institute, USA)</li>					<li>Christopher Atkeson (Carnegie Melon University, USA)</li>
-					<li>Hiroshi Kaminaga (NAIST, Japan)</li>
+					<li>Hiroshi Kaminaga (AIST, Japan)</li>
 					<li>Abderrahmane Kheddar (CNRS-AIST Joint Robotics Laboratory, France)</li>					
 				</ul>		
 
