--- a/humanoids2018/photos.html
+++ b/humanoids2018/photos.html
@@ -1,113 +1,160 @@
-<!DOCTYPE html>
-<html >
-<head>
+<!DOCTYPE HTML>
+<!--
+	Retrospect by TEMPLATED
+	templated.co @templatedco
+	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
+-->
 
-	<meta charset="UTF-8">
-	<title>Can we Build Baymax? 2016 Photos</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!--<link href='https://fonts.googleapis.com/css?family=Roboto+Mono:400,300' rel='stylesheet' type='text/css'>-->
-	<!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">-->
+<html>
+	<head>
 
-	<link rel="stylesheet" href="assets/css/photos.css">
-	<link rel="stylesheet" href="assets/css/photos_override.css" />
-	<link rel="stylesheet" href="assets/css/main_orig.css" />
-	<link rel="stylesheet" href="assets/css/override.css" />
-
-	<link rel="apple-touch-icon" sizes="57x57" href="images/favicons/apple-touch-icon-57x57.png">
-	<link rel="apple-touch-icon" sizes="60x60" href="images/favicons/apple-touch-icon-60x60.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="images/favicons/apple-touch-icon-72x72.png">
-	<link rel="apple-touch-icon" sizes="76x76" href="images/favicons/apple-touch-icon-76x76.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="images/favicons/apple-touch-icon-114x114.png">
-	<link rel="apple-touch-icon" sizes="120x120" href="images/favicons/apple-touch-icon-120x120.png">
-	<link rel="apple-touch-icon" sizes="144x144" href="images/favicons/apple-touch-icon-144x144.png">
-	<link rel="apple-touch-icon" sizes="152x152" href="images/favicons/apple-touch-icon-152x152.png">
-	<link rel="apple-touch-icon" sizes="180x180" href="images/favicons/apple-touch-icon-180x180.png">
-	<link rel="icon" type="image/png" href="images/favicons/favicon-32x32.png" sizes="32x32">
-	<link rel="icon" type="image/png" href="images/favicons/android-chrome-192x192.png" sizes="192x192">
-	<link rel="icon" type="image/png" href="images/favicons/favicon-96x96.png" sizes="96x96">
-	<link rel="icon" type="image/png" href="images/favicons/favicon-16x16.png" sizes="16x16">
-	<link rel="manifest" href="images/favicons/manifest.json">
-	<link rel="mask-icon" href="images/favicons/safari-pinned-tab.svg" color="#5bbad5">
-	<link rel="shortcut icon" href="images/favicons/favicon.ico">
-	<meta name="apple-mobile-web-app-title" content="Can We Build Baymax?">
-	<meta name="application-name" content="Can We Build Baymax?">
-	<meta name="msapplication-TileColor" content="#da532c">
-	<meta name="msapplication-TileImage" content="images/favicons/mstile-144x144.png">
-	<meta name="msapplication-config" content="img/favicons/browserconfig.xml">
-	<meta name="theme-color" content="#ffffff">
-
-	<!-- for facebook -->
-	<meta property="og:url"                content="http://www.cs.cmu.edu/~cga/humanoids16workshop/" />
-	<meta property="og:type"               content="article" />
-	<meta property="og:title"              content="Can we Build Baymax? Humanoids 2016" />
-	<meta property="og:description"        content="We are glad to announce that the full-day workshop 'Can We Build Baymax? Part 2. Making Hard Robots Soft: Sensors, Skin, and Airbags will be held on November 15, 2016, at IEEE-RAS International Conference on Humanoids Robots (Humanoids 2016), Cancun, Mexico. We invite you to contribute and to participate in this workshop."/>
-	<meta property="og:image"              content="images/facebook/banner.jpg" />
+		<!-- realfavicongenerator.net -->
+		<link rel="apple-touch-icon" sizes="180x180" href="images/favicons/green/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="images/favicons/green/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="images/favicons/green/favicon-16x16.png">
+		<link rel="manifest" href="images/favicons/green/site.webmanifest">
+		<link rel="mask-icon" href="images/favicons/green/safari-pinned-tab.svg" color="#0f1524">
+		<link rel="shortcut icon" href="images/favicons/green/favicon.ico">
+		<meta name="apple-mobile-web-app-title" content="CWBB? 2018">
+		<meta name="application-name" content="CWBB? 2018">
+		<meta name="msapplication-TileColor" content="#da532c">
+		<meta name="msapplication-config" content="images/favicons/green/browserconfig.xml">
+		<meta name="theme-color" content="#ffffff">
 
 
 
-</head>
+		<title>Can we build Baymax? 2018 Photos</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+		<!-- <link rel="stylesheet" href="assets/css/main_orig.css" /> -->
+		
+		
+		<link rel="stylesheet" href="assets/css/photos.css">
+		<link rel="stylesheet" href="assets/css/photos_override.css" />
+		
+		<link rel="stylesheet" href="assets/css/main_orig.css" />
+		<link rel="stylesheet" href="assets/css/override.css" />
 
+
+		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+
+		<!-- for facebook -->
+		<meta property="og:url"                content="http://www.cs.cmu.edu/~cga/humanoids18workshop/" />
+		<meta property="og:type"               content="article" />
+		<meta property="og:title"              content="Can we build Baymax? 2018 WS Photos" />
+		<meta property="og:description"        content="We are excited to announce that the full-day workshop 'Can We Build Baymax? Part 4. Fail-Safe HW & SW and Learning in Humanoid Robots' will be held on November 6, 2018 at IEEE-RAS International Conference on Humanoid Robots (Humanoids 2018) in Beijing, China. We invite you to contribute and to participate in this workshop."/>
+		<meta property="og:image"              content="images/facebook/banner.jpg" />
+
+
+
+
+	</head>
 	<body class="landing">
 
 		<!-- Header -->
-		<header id="header" class="alt">
-			<!--<div class="bighero-font"><a href="index.html">Humanoids2016</a></div>-->
-			<h1><a href="index.html">Humanoids 2016</a></h1>
-			<!--<a href="index.html" class="position: absolute; display: inline-block; left: 1.25em; margin: 0; padding: 0;">Humanoids2016</a> -->
-			<a href="#nav">Menu</a>
-		</header>
+			<header id="header" class="alt">
+				<!--<div class="bighero-font"><a href="index.html">Humanoids2017</a></div>-->
+				<h1><a href="#top">Humanoids 2018</a></h1>
+				<!--<a href="index.html" class="position: absolute; display: inline-block; left: 1.25em; margin: 0; padding: 0;">Humanoids2017</a> -->
+				<a href="#nav">Menu</a>
+			</header>
 
 		<!-- Nav -->
-		<nav id="nav">
-			<ul class="links">
-				<li><a href="#top">Top</a></li>
-				<!-- <li><a href="#call">Call for Contribution</a></li> -->
-				<li><a href="index.html#abstract">Abstract</a></li>
-				<li><a href="index.html#schedule">Schedule</a></li>
-				<li><a href="index.html#speakers">Speakers</a></li>
-				<li><a href="index.html#organizers">Organizers</a></li>
-				<li><a href="index.html#links">Related Links</a></li>
-				<li><a href="index.html#contact">Contact</a></li>
+			<nav id="nav">
+				<ul class="links">
+					<li><a href="#top">Top</a></li>
+					<!-- <li><a href="#call">Call for Contributions</a></li>-->
+					<li><a href="./#objectives">Objectives</a></li> 
+					<li><a href="./#schedule">Schedule</a></li>
+					<li><a href="./#speakers">Speakers</a></li>
+					<li><a href="./#organizers">Organizers</a></li>
+					<li><a href="./#links">Related Links</a></li>
+					<li><a href="./#contact">Contact</a></li>
+					<a href="photos.html">Photos</a></li>
 				
-			</ul>
-		</nav>
+				</ul>
+			</nav>
 
-		<section id="banner" class="photobanner">
-			<!--<i class="icon fa-diamond"></i>-->
-			<div id="thanks">Thanks for coming!</div>
-			<div id="WSTitle">
-				<div class="bighero-font">Can We Build</div>
-				<div class="bighero-font">Baymax?</div>
-			</div>
-			<p>Part 2: Making Hard Robots Soft<br>Sensors, Skin and Airbags</p>
-			<p>Cancun, Mexico
-			<br>Nov. 15, 2016</p> 
-			<p>Click for full sized images.</p>
+		<!-- Banner -->
+
+		<span class="anchor" id="top"></span>
+
+			<section id="banner" class="photobanner">
+				<!--<i class="icon fa-diamond"></i>-->
+				<div id="thanks">Thanks for coming!</div>
+				<div id="WSTitle">
+					<div class="bighero-font">Can we build</div>
+					<div class="bighero-font">Baymax?</div>
+				</div>
+				<p><strong>Part 4: Fail-Safe HW & SW<br>and Learning in Humanoid Robots</strong></p>						
+				<p>Beijing, China
+				<br>Nov. 6, 2018</p> 
+
+				<!-- 
+				<ul class="actions">
+					<li><a href="photos.html" class="button big special">Photos</a></li>
+				</ul>
+				-->
+
+
+			<!-- <div id="baymax"><img style="height: 100%;" src="images/baymax/baymax.png" /></div> -->
+
+
+			</section>
+
+
+
+
+
 			
-
-		<div id="baymax"><img style="height: 100%;" src="images/baymax/baymax.png" /></div>
-
-
-		</section>  
-
 		<div class="m-p-g">
 			<div class="m-p-g__thumbs" data-google-image-layout data-max-height="350" width="100%">
 
 
-				<a target="_blank" href="images/workshop/original/workshop09.jpg"> 
-					<img src="images/workshop/web/workshop09.jpg" class="m-p-g__thumbs-img" />
+				<a target="_blank" href="images/workshop/original/workshop01.jpg"> 
+					<img src="images/workshop/web/workshop01.jpg" class="m-p-g__thumbs-img" />
+				</a>
+
+				<a target="_blank" href="images/workshop/original/workshop02.jpg"> 
+					<img src="images/workshop/web/workshop02.jpg" class="m-p-g__thumbs-img" />
+				</a>
+
+				<a target="_blank" href="images/workshop/original/workshop03.jpg"> 
+					<img src="images/workshop/web/workshop03.jpg" class="m-p-g__thumbs-img" />
+				</a>				
+
+				<a target="_blank" href="images/workshop/original/workshop04.jpg"> 
+					<img src="images/workshop/web/workshop04.jpg" class="m-p-g__thumbs-img" />
+				</a>
+
+				<a target="_blank" href="images/workshop/original/workshop05.jpg"> 
+					<img src="images/workshop/web/workshop05.jpg" class="m-p-g__thumbs-img" />
+				</a>
+
+				<a target="_blank" href="images/workshop/original/workshop06.jpg"> 
+					<img src="images/workshop/web/workshop06.jpg" class="m-p-g__thumbs-img" />
+				</a>
+
+				<a target="_blank" href="images/workshop/original/workshop07.jpg"> 
+					<img src="images/workshop/web/workshop07.jpg" class="m-p-g__thumbs-img" />
 				</a>
 
 				<a target="_blank" href="images/workshop/original/workshop08.jpg"> 
 					<img src="images/workshop/web/workshop08.jpg" class="m-p-g__thumbs-img" />
 				</a>
 
-				<a target="_blank" href="images/workshop/original/workshop23.jpg"> 
-					<img src="images/workshop/web/workshop23.jpg" class="m-p-g__thumbs-img" />
-				</a>				
+				<a target="_blank" href="images/workshop/original/workshop09.jpg"> 
+					<img src="images/workshop/web/workshop09.jpg" class="m-p-g__thumbs-img" />
+				</a>
 
-				<a target="_blank" href="images/workshop/original/workshop07.jpg"> 
-					<img src="images/workshop/web/workshop07.jpg" class="m-p-g__thumbs-img" />
+				<a target="_blank" href="images/workshop/original/workshop10.jpg"> 
+					<img src="images/workshop/web/workshop10.jpg" class="m-p-g__thumbs-img" />
+				</a>
+
+				<a target="_blank" href="images/workshop/original/workshop11.jpg"> 
+					<img src="images/workshop/web/workshop11.jpg" class="m-p-g__thumbs-img" />
 				</a>
 
 				<a target="_blank" href="images/workshop/original/workshop12.jpg"> 
@@ -142,49 +189,6 @@
 					<img src="images/workshop/web/workshop19.jpg" class="m-p-g__thumbs-img" />
 				</a>
 
-				<a target="_blank" href="images/workshop/original/workshop20.jpg"> 
-					<img src="images/workshop/web/workshop20.jpg" class="m-p-g__thumbs-img" />
-				</a>
-
-				<a target="_blank" href="images/workshop/original/workshop21.jpg"> 
-					<img src="images/workshop/web/workshop21.jpg" class="m-p-g__thumbs-img" />
-				</a>
-
-				<a target="_blank" href="images/workshop/original/workshop22.jpg"> 
-					<img src="images/workshop/web/workshop22.jpg" class="m-p-g__thumbs-img" />
-				</a>
-
-				<a target="_blank" href="images/workshop/original/workshop01.jpg"> 
-					<img src="images/workshop/web/workshop01.jpg" class="m-p-g__thumbs-img" />
-				</a>
-
-				<a target="_blank" href="images/workshop/original/workshop02.jpg"> 
-					<img src="images/workshop/web/workshop02.jpg" class="m-p-g__thumbs-img" />
-				</a>
-
-				<a target="_blank" href="images/workshop/original/workshop03.jpg"> 
-					<img src="images/workshop/web/workshop03.jpg" class="m-p-g__thumbs-img" />
-				</a>
-
-				<a target="_blank" href="images/workshop/original/workshop04.jpg"> 
-					<img src="images/workshop/web/workshop04.jpg" class="m-p-g__thumbs-img" />
-				</a>
-
-				<a target="_blank" href="images/workshop/original/workshop05.jpg"> 
-					<img src="images/workshop/web/workshop05.jpg" class="m-p-g__thumbs-img" />
-				</a>
-
-				<a target="_blank" href="images/workshop/original/workshop06.jpg"> 
-					<img src="images/workshop/web/workshop06.jpg" class="m-p-g__thumbs-img" />
-				</a>
-
-				<a target="_blank" href="images/workshop/original/workshop10.jpg"> 
-					<img src="images/workshop/web/workshop10.jpg" class="m-p-g__thumbs-img" />
-				</a>
-
-				<a target="_blank" href="images/workshop/original/workshop11.jpg"> 
-					<img src="images/workshop/web/workshop11.jpg" class="m-p-g__thumbs-img" />
-				</a>
 
 			</div>
 
@@ -194,23 +198,89 @@
 
 
 
-	<!-- Scripts -->
-	<script src="assets/js/jquery.min.js"></script>
-	<script src="assets/js/skel.min.js"></script>
-	<script src="assets/js/util.js"></script>
-	<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-	<script src="assets/js/main.js"></script>
+		<!-- Footer -->
+		<!--
+		<footer id="footer">
+			<div class="inner">
+				<p><a href="http://alexalspach.com">Designed by Alex Alspach. 2018</a></p>
+				
+			</div>
+		</footer>
+	-->
 
-	<script>
-		var elem = document.querySelector('.m-p-g');
+		<!-- Scripts -->
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/skel.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+		<script src="assets/js/main.js"></script>
 
-		document.addEventListener('DOMContentLoaded', function() {
-			var gallery = new MaterialPhotoGallery(elem);
-		});
-	</script>
 
-	<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/45226/material-photo-gallery.min.js'></script>
 
-  
-</body>
+		<script>
+			var elem = document.querySelector('.m-p-g');
+
+			document.addEventListener('DOMContentLoaded', function() {
+				var gallery = new MaterialPhotoGallery(elem);
+			});
+		</script>
+
+		<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/45226/material-photo-gallery.min.js'></script>
+
+
+
+
+		<script>
+			$(".show-more a").each(function() {
+			    var $link = $(this);
+			    var $content = $link.parent().prev("div.text-content");
+
+			    console.log($link);
+
+			    var visibleHeight = $content[0].clientHeight;
+			    var actualHide = $content[0].scrollHeight - 1;
+
+			    console.log(actualHide);
+			    console.log(visibleHeight);
+
+			    if (actualHide > visibleHeight) {
+			        $link.show();
+			    } else {
+			        $link.hide();
+			    }
+			});
+
+			$(".show-more a").on("click", function() {
+			    var $link = $(this);
+			    var $content = $link.parent().prev("div.text-content");
+			    var linkText = $link.text();
+
+			    $content.toggleClass("short-text, full-text");
+
+			    $link.text(getShowLinkText(linkText));
+
+			    return false;
+			});
+
+			function getShowLinkText(currentText) {
+			    var newText = '';
+
+			    if (currentText.toUpperCase() === "SUMMARY") {
+			        newText = "Hide Summary";
+			    } else {
+			        newText = "Summary";
+			    }
+
+			    return newText;
+			}
+		</script>
+
+
+
+
+	</body>
 </html>
+
+
+
+
